--- a/Chapter4_Finite_Element_Simulation.tex
+++ b/Chapter4_Finite_Element_Simulation.tex
@@ -216,6 +216,7 @@ For the simulation, the sound power level of one single 1/3-octave band is divid
 \section{Parametric study}
 \label{section:parametric_study}
 \subsection{Variation of underfloor geometry}
+\label{section:variation_geometry}
 
 \begin{figure}[H]
 	\centering
