--- a/literature.bib
+++ b/literature.bib
@@ -87,7 +87,7 @@ doi = {10.1121/1.1984860}
 }
 
 @article{Seybert2008MeasurementOP,
-	title={Measurement of pavement absorption using ISO 13472‐2},
+	title={Measurement of pavement absorption using {ISO} 13472‐2},
 	author={Andrew F. Seybert and Jun-xia Han},
 	journal={Journal of the Acoustical Society of America},
 	year={2008},
@@ -100,4 +100,28 @@ doi = {10.1121/1.1984860}
 	title = {open{CFS}},
 	howpublished = "\url{https://opencfs.org/}",
 	year = {2022}
+}
+
+
+@mastersthesis{wolkesson_2013,
+	title = {Evaluation of impedance tube methods - {A} two microphone in-situ method for road surfaces and the three microphone transfer function method for porous materials},
+	author = {Wolkesson, Martin},
+	year = {2013},
+	school = {Chalmers university of technology}
+}
+
+@article{hald_situ_2019,
+	title = {In-situ impedance and absorption coefficient measurements using a double-layer microphone array},
+	volume = {143},
+	issn = {0003682X},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0003682X18300410},
+	doi = {10.1016/j.apacoust.2018.08.027},
+	abstract = {Acoustic impedance is typically measured using an impedance tube, which requires a material sample physically ﬁtted to the tube. However, the impedance can vary greatly between the material mounted in the tube and the material located in a real environment, where the mounting conditions are likely to be different. Also, oblique incidence cannot be measured in an impedance tube. In this paper, we investigate the use of a double-layer microphone array for in-situ measurement of surface impedance and absorption coefﬁcient. With the array positioned near the material surface, a source emits broad-band sound towards the array and the material. A measurement is taken, and the sound pressure and the surface-normal particle velocity at the material surface are calculated using Statistically Optimized Near-ﬁeld Acoustical Holography (SONAH). From the surface pressure and velocity, the impedance across a selected area is calculated, and ﬁnally the absorption coefﬁcient is calculated from the impedance. A set of tests has been performed on porous material samples in an anechoic chamber as well as in a ﬁtted room. Different sample sizes and different sound incidence angles have been considered. The results show consistency between the measurements in the anechoic room and the ordinary room as well as good agreement with Miki’s model up to large oblique incidence angles.},
+	language = {en},
+	urldate = {2022-12-31},
+	journal = {Applied Acoustics},
+	author = {Hald, Jørgen and Song, Wookeun and Haddad, Karim and Jeong, Cheol-Ho and Richard, Antoine},
+	month = jan,
+	year = {2019},
+	pages = {74--83},
 }
