--- a/Innentitelseite.tex
+++ b/Innentitelseite.tex
@@ -21,7 +21,7 @@
 %Titel der Diplomarbeit
 \begin{minipage}{14cm} 
 	{\LARGE DIPLOMARBEIT} \\[12mm]
-	\doublespacing\textbf{\LARGE Development and investigation of a finite-element model for predicting railway vehicle underfloor noise}
+	\doublespacing\textbf{\LARGE Development and validation of a finite-element model for predicting railway vehicle underfloor noise}
 	%\\[0.3cm]
 	%\textbf{\LARGE Modelling for Railway Vehicles}
 \end{minipage}
